--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,26 @@
 {
-    "extends": "next/core-web-vitals",
-    "rules": {
-        "quotes": ["error", "double"],
-        "semi": ["error", "always"],
-        "no-unused-vars": "warn",
-        "no-console": "warn",
-        "sort-imports": "off",
-        "import/order": "off"
-    },
     "env": {
         "browser": true,
-        "node": true,
-        "es6": true
+        "es2021": true,
+        "node": true
     },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2020,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint", "react"],
+    "rules": {
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "double"],
+        "semi": ["error", "always"],
+        "react/react-in-jsx-scope": "off",
+        "no-unused-vars": "warn"
     }
 }
