--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
         "prettier": "prettier . --write",
         "prettier:check": "prettier . --check"
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged && npm prettier && npm run lint",
+            "pre-push": "npm test && npm run build && npm prettier",
+            "pre-rebase": "npm test && npm run build && npm prettier"
+        }
+    },
     "dependencies": {
         "next": "latest",
         "react": "latest",
@@ -21,19 +28,21 @@
         "@types/node": "latest",
         "@types/react": "latest",
         "@types/react-dom": "latest",
+        "@typescript-eslint/eslint-plugin": "^6.7.3",
+        "@typescript-eslint/parser": "^6.7.3",
         "autoprefixer": "latest",
-        "eslint": "latest",
+        "eslint": "^8.50.0",
         "eslint-config-next": "latest",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-standard-with-typescript": "^39.1.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-n": "^16.1.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.2",
         "husky": "^8.0.3",
         "postcss": "latest",
-        "prettier": "3.0.3",
+        "prettier": "^3.0.3",
         "tailwindcss": "latest",
-        "typescript": "latest"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged && npm prettier:check",
-            "pre-push": "npm test && npm run build && npm prettier"
-        }
+        "typescript": "^5.2.2"
     }
 }
