--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "react-dom": "latest"
     },
     "devDependencies": {
+        "@commitlint/config-conventional": "^17.7.0",
         "@types/node": "latest",
         "@types/react": "latest",
         "@types/react-dom": "latest",
         "@typescript-eslint/eslint-plugin": "^6.7.3",
         "@typescript-eslint/parser": "^6.7.3",
         "autoprefixer": "latest",
+        "commitlint": "^17.7.2",
         "eslint": "^8.50.0",
         "eslint-config-next": "latest",
         "eslint-config-prettier": "^9.0.0",
