--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "lint-staged": "next lint --fix",
         "test": "",
         "prepare": "husky install",
         "prettier": "prettier . --write",
