--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "postcss": "latest",
         "prettier": "^3.0.3",
         "tailwindcss": "latest",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "zod": "^3.22.4"
     }
 }
