EQC-40 schemas update, project structure, dotenv nanoid date-fns installed, drizzleORM config added

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
         "@radix-ui/react-slot": "^1.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "date-fns": "^2.30.0",
         "drizzle-orm": "^0.28.6",
         "husky-init": "^8.0.0",
         "lucide-react": "^0.284.0",
+        "nanoid": "^5.0.1",
         "next": "latest",
         "react": "latest",
         "react-dom": "latest",
@@ -49,6 +51,7 @@
         "@typescript-eslint/eslint-plugin": "^6.7.3",
         "@typescript-eslint/parser": "^6.7.3",
         "autoprefixer": "latest",
+        "dotenv": "^16.3.1",
         "drizzle-kit": "^0.19.13",
         "eslint": "^8.50.0",
         "eslint-config-next": "latest",
