--- a/package.json
+++ b/package.json
@@ -27,16 +27,11 @@
         ]
     },
     "dependencies": {
-        "@radix-ui/react-slot": "^1.0.2",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.0.0",
+        "axios": "^1.5.1",
         "husky-init": "^8.0.0",
-        "lucide-react": "^0.284.0",
         "next": "latest",
         "react": "latest",
-        "react-dom": "latest",
-        "tailwind-merge": "^1.14.0",
-        "tailwindcss-animate": "^1.0.7"
+        "react-dom": "latest"
     },
     "devDependencies": {
         "@commitlint/config-conventional": "^17.7.0",
@@ -47,6 +42,7 @@
         "@typescript-eslint/parser": "^6.7.3",
         "autoprefixer": "latest",
         "commitlint": "^17.7.2",
+        "dotenv": "^16.3.1",
         "eslint": "^8.50.0",
         "eslint-config-next": "latest",
         "eslint-config-prettier": "^9.0.0",
@@ -60,7 +56,6 @@
         "postcss": "latest",
         "prettier": "^3.0.3",
         "tailwindcss": "latest",
-        "typescript": "^5.2.2",
-        "zod": "^3.22.4"
+        "typescript": "^5.2.2"
     }
 }
