EQC-27 modules install

--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
         ]
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.0.2",
         "axios": "^1.5.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
         "husky-init": "^8.0.0",
+        "lucide-react": "^0.286.0",
         "next": "latest",
         "react": "latest",
-        "react-dom": "latest"
+        "react-dom": "latest",
+        "tailwind-merge": "^1.14.0"
     },
     "devDependencies": {
         "@commitlint/config-conventional": "^17.7.0",
