--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "next": "latest",
         "react": "latest",
         "react-dom": "latest",
-        "tailwind-merge": "^1.14.0"
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@commitlint/config-conventional": "^17.7.0",
