--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test": "",
         "prepare": "husky install",
         "prettier": "prettier . --write",
-        "prettier:check": "prettier . --check"
+        "prettier:check": "prettier . --check",
+        "check": "lint-staged && npm prettier && npm run lint"
     },
     "husky": {
         "hooks": {
