master small prettier changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "prepare": "husky install",
         "prettier": "prettier . --write",
         "prettier:check": "prettier . --check",
-        "check": "lint-staged && npm prettier && npm run lint"
+        "check": "lint-staged && npm run prettier && npm run lint"
     },
     "husky": {
         "hooks": {
