--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         ]
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "husky-init": "^8.0.0",
-        "lucide-react": "^0.286.0",
         "next": "latest",
         "react": "latest",
         "react-dom": "latest",
@@ -60,6 +62,7 @@
         "eslint-plugin-react": "^7.33.2",
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
+        "lucide-react": "^0.287.0",
         "postcss": "latest",
         "prettier": "^3.0.3",
         "tailwindcss": "latest",
