EQC-53 vitest installed

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "postcss": "latest",
         "prettier": "^3.0.3",
         "tailwindcss": "latest",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "vitest": "^0.34.6"
     }
 }
