--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
