--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         ]
     },
     "dependencies": {
+        "@neondatabase/serverless": "^0.6.0",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
@@ -36,6 +37,7 @@
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "drizzle-orm": "^0.28.6",
         "husky-init": "^8.0.0",
         "next": "latest",
         "react": "latest",
@@ -53,6 +55,7 @@
         "autoprefixer": "latest",
         "commitlint": "^17.7.2",
         "dotenv": "^16.3.1",
+        "drizzle-kit": "^0.19.13",
         "eslint": "^8.50.0",
         "eslint-config-next": "latest",
         "eslint-config-prettier": "^9.0.0",
