--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "@neondatabase/serverless": "^0.6.0",
+        "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
@@ -62,6 +63,7 @@
         "eslint-config-standard-with-typescript": "^39.1.0",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-n": "^16.1.0",
+        "eslint-plugin-next": "^0.0.0",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.33.2",
         "husky": "^8.0.0",
