--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "test": "",
         "prepare": "husky install",
         "prettier": "prettier . --write",
-        "prettier:check": "prettier . --check"
+        "prettier:check": "prettier . --check",
+        "db:generate": "drizzle-kit generate:pg",
+        "db:push": "drizzle-kit push:pg",
+        "studio": "drizzle-kit studio"
     },
     "husky": {
         "hooks": {
@@ -33,11 +36,11 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "date-fns": "^2.30.0",
-        "drizzle-orm": "^0.28.6",
         "husky-init": "^8.0.0",
         "lucide-react": "^0.284.0",
         "nanoid": "^5.0.1",
         "next": "latest",
+        "postgres": "^3.4.2",
         "react": "latest",
         "react-dom": "latest",
         "tailwind-merge": "^1.14.0",
@@ -54,6 +57,8 @@
         "autoprefixer": "latest",
         "dotenv": "^16.3.1",
         "drizzle-kit": "^0.19.13",
+        "drizzle-orm": "^0.28.6",
+        "drizzle-zod": "^0.5.1",
         "eslint": "^8.50.0",
         "eslint-config-next": "latest",
         "eslint-config-prettier": "^9.0.0",
@@ -64,6 +69,7 @@
         "eslint-plugin-react": "^7.33.2",
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
+        "pg": "^8.11.3",
         "postcss": "latest",
         "prettier": "^3.0.3",
         "tailwindcss": "latest",
