--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "check": "lint-staged && npm run prettier && npm run lint && npm run test",
         "db:generate": "drizzle-kit generate:pg",
         "db:push": "drizzle-kit push:pg",
+        "db:introspect": "drizzle-kit introspect:pg",
         "studio": "drizzle-kit studio"
     },
     "husky": {
@@ -31,6 +32,7 @@
         ]
     },
     "dependencies": {
+        "@auth/drizzle-adapter": "^0.3.5",
         "@clerk/localizations": "^1.26.7",
         "@clerk/nextjs": "^4.26.1",
         "@clerk/themes": "^1.7.9",
@@ -48,11 +50,11 @@
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
         "date-fns": "^2.30.0",
-        "drizzle-orm": "^0.28.6",
         "husky-init": "^8.0.0",
         "lucide-react": "^0.284.0",
         "nanoid": "^5.0.1",
         "next": "latest",
+        "next-auth": "^4.24.4",
         "postgres": "^3.4.2",
         "react": "latest",
         "react-dom": "latest",
