--- a/package.json
+++ b/package.json
@@ -33,13 +33,11 @@
     },
     "dependencies": {
         "@auth/drizzle-adapter": "^0.3.5",
-        "@clerk/localizations": "^1.26.7",
-        "@clerk/nextjs": "^4.26.1",
-        "@clerk/themes": "^1.7.9",
         "@mantine/core": "^7.1.7",
         "@mantine/hooks": "^7.1.7",
         "@neondatabase/serverless": "^0.6.0",
         "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-scroll-area": "^1.0.5",
@@ -70,6 +68,7 @@
         "@types/react-dom": "latest",
         "@typescript-eslint/eslint-plugin": "^6.7.3",
         "@typescript-eslint/parser": "^6.7.3",
+        "@upstash/redis": "^1.24.3",
         "autoprefixer": "latest",
         "dotenv": "^16.3.1",
         "drizzle-kit": "^0.19.13",
