--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
         "date-fns": "^2.30.0",
+        "flowbite-react": "^0.6.4",
         "husky-init": "^8.0.0",
         "lucide-react": "^0.284.0",
         "nanoid": "^5.0.1",
@@ -58,6 +59,7 @@
         "postgres": "^3.4.2",
         "react": "latest",
         "react-dom": "latest",
+        "react-responsive-carousel": "^3.2.23",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7"
     },
