--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "prettier": "prettier . --write",
         "prettier:check": "prettier . --check",
         "check": "lint-staged && npm run prettier && npm run lint && npm run test",
-        "db:migrate": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:latest",
-        "db:migrate:undo": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:down",
-        "db:migrate:make": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:make",
-        "d:up": "docker compose up"
+        "d:up": "docker compose up",
+        "studio": "drizzle-kit studio",
+        "db:push": "drizzle-kit push:pg",
+        "db:generate": "drizzle-kit generate:pg",
+        "db:introspect": "drizzle-kit introspect:pg",
+        "db:up": "drizzle-kit up:pg"
     },
     "husky": {
         "hooks": {
@@ -36,7 +38,6 @@
         "@auth/drizzle-adapter": "^0.3.5",
         "@mantine/core": "^7.1.7",
         "@mantine/hooks": "^7.1.7",
-        "@neondatabase/serverless": "^0.6.0",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
@@ -75,6 +76,7 @@
         "@neondatabase/serverless": "^0.6.0",
         "@tanstack/react-query": "^5.4.3",
         "@types/node": "latest",
+        "@types/pg": "^8.10.9",
         "@types/react": "latest",
         "@types/react-dom": "latest",
         "@typescript-eslint/eslint-plugin": "^6.7.3",
