--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toggle": "^1.0.3",
+        "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.0",
