EQC-70 huuuge fix w/ db and FE

--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@thirdweb-dev/react": "^4.1.10",
+        "@thirdweb-dev/sdk": "^4.0.17",
         "axios": "^1.5.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
         "date-fns": "^2.30.0",
+        "ethers": "^5.7.2",
         "flowbite-react": "^0.6.4",
         "husky-init": "^8.0.0",
         "knex": "^3.0.1",
