--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
         "pg": "^8.11.3",
+        "pino-pretty": "^10.2.3",
         "postcss": "latest",
         "prettier": "^3.0.3",
         "sharp": "^0.32.6",
