--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
         "nanoid": "^5.0.1",
         "next": "latest",
         "next-auth": "^4.24.4",
+        "next-themes": "^0.2.1",
         "postgres": "^3.4.3",
         "react": "latest",
         "react-bootstrap": "^2.9.1",
         "react-dom": "latest",
         "react-responsive-carousel": "^3.2.23",
+        "sonner": "^1.3.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.1"
